--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>MavNet</title>
 <style>
+/* ---------- BODY & GENERAL ---------- */
 body{
     font-family: Arial, sans-serif;
     background:#0b1020;
@@ -70,18 +71,6 @@ nav a:hover {color:#bfa100;}
 }
 .due-soon {border-left:4px solid #bfa100;}
 .overdue {border-left:4px solid #ff4444;}
-
-/* ---------- BADGES ---------- */
-#badges-box {
-    background:#000;
-    border-radius:18px;
-    padding:50px;
-    margin:20px auto;
-    max-width:600px;
-    color:#bbb;
-    font-size:1.2em;
-    border:2px dashed #555;
-}
 </style>
 </head>
 <body>
@@ -89,7 +78,7 @@ nav a:hover {color:#bfa100;}
 <!-- ---------- SYSTEM BANNER ---------- -->
 <div id="system-banner">
     ⚠️ System updates are in progress. Some features may be temporarily unavailable. ⚠️
-    <span class="whats-new">✨ What's New: Added Help page, Reminders with Due Dates, Badges, and fun facts!</span>
+    <span class="whats-new">✨ What's New: Added Help page, Reminders with Due Dates, and fun facts!</span>
 </div>
 
 <!-- ---------- NAV ---------- -->
@@ -101,7 +90,6 @@ nav a:hover {color:#bfa100;}
     <a href="#updates">Updates</a>
     <a href="#suggestions">Suggestions</a>
     <a href="#help">Help</a>
-    <a href="#badges" onclick="showBadges()">Badges</a>
 </nav>
 
 <!-- ---------- HOME ---------- -->
@@ -122,14 +110,6 @@ nav a:hover {color:#bfa100;}
     <div class="box" id="home-reminders">
         <h3>📝 Reminders Due Soon</h3>
         <div id="reminderList"></div>
-    </div>
-</div>
-
-<!-- ---------- BADGES ---------- -->
-<div class="box" id="badges" style="display:none;">
-    <h1>🏅 Badges</h1>
-    <div id="badges-box">
-        Not yet implemented
     </div>
 </div>
 
@@ -206,14 +186,6 @@ reminders.forEach(rem=>{
     div.innerHTML = `<strong>${rem.text}</strong> - Due: ${rem.due}`;
     reminderList.appendChild(div);
 });
-
-// ===== SHOW BADGES FUNCTION =====
-function showBadges() {
-    // Hide all main sections
-    document.getElementById("home").style.display = "none";
-    // Show badges
-    document.getElementById("badges").style.display = "block";
-}
 </script>
 
 </body>
